--- a/submissions/thesis-original/results/results.tex
+++ b/submissions/thesis-original/results/results.tex
@@ -18,5 +18,5 @@ It is critical that our system be robust with respect to time so investors can r
 
 Finally, we test our system’s predictive power for making forecasts of different time periods. We use the same system of reverse-engineering time slices that we used in our previous experiment to robustness, but this time we vary the time difference between the slice that provides our features and the slice that provides our label. Preliminary testing on a Apr-2012 features slice collected from the Sep-2016 is shown in Table 3.7. Very few companies appear to change stage over a period of less than 2 years so we will focus our experimentation on forecast windows of 2-4 years. We performed testing against labels from the Apr-2017 dataset.
 
- \ifcsdef{mainfile}{}{\bibliography{../references/primary}}
+ \ifcsdef{mainfile}{}{\printbibliography}
 \end{document}
