--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -74,10 +74,6 @@
 \newacronym{roc}{ROC}{receiver operating characteristic}
 \newacronym{ipo}{IPO}{initial public offering}
 
-\acrodefn{vc}{VC}{Venture Capital}
-\acrodefn{roc}{ROC}{Receiver Operating Characteristics}
-
-
 % Abbreviation commands for common stuff
 \newabbrev\cdi{CO\textsubscript{2}}
 \newabbrev\lwifi{802.15.4}
@@ -173,7 +169,7 @@ These are the acknowledgements.
   \subfile{../results/results}
   \subfile{../discussion/discussion}
   \appendix
-  \subfile{../appendices/primary}
+  \subfile{../thesis/appendices}
   \printbibliography
 \end{refsection}
 
