gitignore for submissions v2

--- a/submissions/thesis-original/litreview/litreview.tex
+++ b/submissions/thesis-original/litreview/litreview.tex
@@ -34,7 +34,7 @@ Figure~\ref{fig:litreview:criteria:fund} illustrates the typical structure of a 
 
 \begin{figure}[!htb]
     \centering
-    \input{../diagrams/figures/fund_structure.pdf}
+    \input{figures/fund_structure}
     \caption{}
     \label{fig:litreview:criteria:fund}
 \end{figure}
@@ -79,7 +79,7 @@ We seek to generalise Ahlers' framework~\cite{ahlers2015} beyond equity crowdfun
 
 \begin{figure}[!htb]
     \centering
-    \input{../diagrams/figures/framework_simple}
+    \input{figures/framework_simple}
     \caption{Proposed conceptual framework for startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}. For an extended version of this framework, please refer to Figure~\ref{fig:appendix:features:framework}.}
     \label{fig:litreview:theory:framework}
 \end{figure}
@@ -89,7 +89,7 @@ Next, we must operationalise this conceptual framework into features that we can
 \begin{table}[!htb]
     \centering
     \scalebox{1}{
-        \input{../diagrams/tables/litreview_feature_summary}
+        \input{tables/feature_summary}
     }
     \caption{Features relevant to startup investment. We review thirteen empirical studies that investigate drivers of startup investment. For each study, we note whether included features have a significant effect on the startup investment model. We classify identified features according to our proposed conceptual framework.}
     \label{fig:litreview:features:summary}
@@ -110,7 +110,7 @@ In Table~\ref{fig:litreview:sources:summary}, we outline the characteristics of 
         \begin{sidewaystable}[!htbp]
             \centering
             \scalebox{0.8}{
-                \input{../diagrams/tables/litreview_sources_summary}
+                \input{tables/sources_summary}
             }
             \caption{Data sources relevant to startup investment. We review six data sources commonly used in entrepreneurship research for their suitability for our startup investment task. We evaluate data sources for their ability to provide relevant features for our analyses and for their ease of use in data collection. We exclude offline sources from our analyses. Ratings are: \protect\xmark~=~poor, \protect\cmark~=~satisfactory, \protect\cmark\protect\cmark~=~good.}
             \label{fig:litreview:sources:summary}
@@ -139,7 +139,7 @@ We evaluated common machine learning algorithms with respect to their suitabilit
         \begin{sidewaystable}[!htbp]
             \centering
             \setlength{\extrarowheight}{.5em}
-            \input{../diagrams/tables/litreview_algorithms_evaluation}
+            \input{tables/algorithms_evaluation}
             \caption{Evaluation of machine learning algorithms for startup investment prediction. We review seven common supervised machine learning algorithms for their suitability for our startup investment task. We evaluate algorithms for their robustness to the structure of the data set and their appropriateness for the constraints of our implementation. We rank the algorithms according to the sum of these measures (in each section and overall) and bold highly-ranked algorithms. Ratings are: \protect\xmark~=~poor, \protect\cmark~=~satisfactory, \protect\cmark\protect\cmark~=~good. Algorithms are: NB~=~Naive Bayes, LR~=~Logistic Regression, KNN~=~K-Nearest Neighbours, DT~=~Decision Trees, RF~=~Random Forests, SVM~=~Support Vector Machines, ANN~=~Artificial Neural Networks.}
             \label{fig:litreview:algorithms:evaluation}
         \end{sidewaystable}
