--- a/submissions/thesis-original/appendices/litreview/feature_selection.tex
+++ b/submissions/thesis-original/appendices/litreview/feature_selection.tex
@@ -1,13 +1,13 @@
-\chapter{Feature Summary}
-\label{appendix:feature_summary}
+\chapter{Feature Selection}
+\label{appendix:feature_selection}
 
-We develop a conceptual framework relating startup potential and investor confidence to startup investment. We will operationalise this conceptual framework into features that can be incorporated into our machine learning model. To do this, we review features that have been tested in previous studies related to startup investment or performance. In the following sections, we describe each of these features and outline conceptual and empirical evidence that justify their inclusion in our conceptual framework. Figure~\ref{fig:appendix:features:framework} depicts how these features can be incoprorated into our conceptual framework.
+We develop a conceptual framework relating startup potential and investor confidence to startup investment. We will operationalise this conceptual framework into features that can be incorporated into our machine learning model. To do this, we review features that have been tested in previous studies related to startup investment or performance. In the following sections, we describe each of these features and outline conceptual and empirical evidence that justify their inclusion in our conceptual framework. Figure~\ref{fig:appendix:features:framework_details} depicts how these features can be incoprorated into our conceptual framework.
 
 \begin{figure}[!htbp]
 \centering
-\input{../diagrams/figures/framework_details}
+\input{../figures/litreview/framework_details}
 \caption{Proposed conceptual framework for startup investment. This extended version of the framework includes features identified by empirical studies of startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}.}
-\label{fig:appendix:features:framework}
+\label{fig:appendix:features:framework_details}
 \end{figure}
 
 \section{Venture Quality}
