--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -156,8 +156,8 @@ These are the acknowledgements.
 \begin{refsection}
   \subfile{../introduction/introduction}
   \subfile{../litreview/litreview}
-  \subfile{../methods/methods}
-  \subfile{../results/results}
+  \subfile{../design/design}
+  \subfile{../evaluation/evaluation}
   \subfile{../discussion/discussion}
   \appendix
   \subfile{../thesis/appendices}
