--- a/submissions/thesis-original/litreview/litreview.tex
+++ b/submissions/thesis-original/litreview/litreview.tex
@@ -6,56 +6,57 @@
 
 %Introduction
 
-In this chapter, we first review the startup investment literature to develop criteria to evaluate our investment screening system. We then turn our focus to determining the best techniques to use to create this system, which we break down into three intercorrelated areas: feature selection, data sources and classification algorithms.
+In this chapter, we first review the startup investment literature to develop criteria to evaluate our \gls{vc} investment screening system. We then turn our focus to determining the best techniques to use to create this system, which we break down into three intercorrelated areas: feature selection, data sources and classification algorithms.
 
 \begin{enumerate}
 
-\item Criteria Selection. Venture capital firms review many potential investment candidates to shortlist for investment. Traditional screening methods involve referral, networking and Internet search. These screening methods are highly time-consuming and subject to human selection biases. Based on our review, we believe that a superior system can be assessed on the basis of its efficiency, robustness, and predictive power.
+\item Criteria Selection. \Gls{vc} firms review many potential investment candidates to shortlist for investment. Traditional screening methods involve referral, networking and Internet search. These screening methods are highly time-consuming and subject to human selection biases. Based on our review, we believe that a superior system can be produced and should be assessed on the basis of its efficiency, robustness, and predictive power.
 
-\item Feature Selection. Venture capital investment is a key driver of startup development but our understanding of factors that influence those investment decisions and the subsequent performance of those investments is incomplete. Based on our review of the literature, we propose a hierarchical framework that includes a variety of features that have been previously indicated to be relevant to this investment screening problem. At a high-level, our framework incorporates determinants of startup potential and signals that influence investment confidence.
+\item Feature Selection. \Gls{vc} is a key driver of startup development but our understanding of factors that influence \gls{vc} firms' investment decisions and the subsequent performance of those investments is incomplete. Based on our review of the literature, we propose a hierarchical framework that includes a variety of features that have been previously indicated to be relevant to this investment screening problem. At a high-level, our framework incorporates determinants of startup potential and signals that influence investment confidence.
 
-\item Data Sources. Startup performance is a multi-faceted problem and different data sources provide insights into different actors, relationships and attributes. Our review focuses on new online data sources which have the potential to transform entrepreneurship and venture capital research. Preliminary evidence suggests that the startup databases CrunchBase and AngelList are promising and likely to provide a comprehensive feature set that can form the basis of our system.
+\item Data Sources. Startup performance is a multi-faceted problem and different data sources provide insights into different actors, relationships and attributes. Our review focuses on novel online data sources which have the potential to transform entrepreneurship and \gls{vc} research. Preliminary evidence suggests that the online startup databases CrunchBase and AngelList are promising and likely to provide a comprehensive feature set that can form the basis of our system. Other sources like PatentsView, Twitter, LinkedIn, and PrivCo are considered.
 
-\item Classification Algorithms. Predicting startup performance is a difficult problem for humans. After all, a high percentage of even VC-backed startups still fail. However, machine learning techniques have been used in other areas of finance (e.g. in the public markets) with some success. We cross-reference the characteristics of our intended dataset with the characteristics of common supervised classification algorithms. Our analyses suggest that we should expect Random Forests, Support Vector Machines and Artificial Neural Networks to be most suitable for our system.
+\item Classification Algorithms. Predicting startup performance is a difficult problem for humans. After all, a high percentage of even \gls{vc}-backed startups still fail. However, machine learning techniques have been recently used in other areas of finance (e.g. in the public markets) with some success. We cross-reference the characteristics of our intended dataset with the characteristics of common supervised classification algorithms. Our analyses suggest that we should expect Random Forests, Support Vector Machines and Artificial Neural Networks to be most suitable for our system.
 
 \end{enumerate}
 
 \section{Criteria Selection}
 
-Venture capital financing has lagged behind other forms of high finance (e.g. bond trading, loan applications, insurance) in adopting computational analytics to aid decision-making. Banks are now able to evaluate personal loan requests in minutes while VC firms take far longer to put together deals, sometimes months. While these are markedly different forms of finance (VC has a longer return period, larger investments, higher risk profiles), a more data-informed and analytical approach to venture finance is still foreseeable.
+\Gls{vc} financing has lagged behind other forms of high finance (e.g. bond trading, loan applications, insurance) in adopting computational analytics to aid decision-making. Banks are now able to evaluate personal loan requests in minutes while \gls{vc} firms take far longer to put together deals, sometimes months. While these are markedly different forms of finance (\gls{vc} has a longer return period, larger investments, higher risk profiles), a more data-informed and analytical approach to venture finance is still foreseeable.
 
-In this section, we provide an introduction into VC firm strategy and review the existing state of the VC investment process. We find that analytical tools are nascent and use of analytics in industry is limited. To date only a small handful of VC firms have publicly declared their use of computational analytical methods in their decision making and investment selection process. We explore why the use of data mining in the VC industry is limited and we develop criteria by which we can judge a VC investment screening system to be successful.
+In this section, we provide an introduction into \gls{vc} firm strategy and review the existing state of the \gls{vc} investment process. We find that analytical tools are nascent and use of analytics in industry is limited. To date only a small handful of \gls{vc} firms have publicly declared their use of computational analytical methods in their decision making and investment selection process. We explore why the use of data mining in the \gls{vc} industry is limited and we develop criteria by which we can judge a \gls{vc} investment screening system to be successful.
 
 \subsection{Venture Capital Industry}
 
-Early-stage investment is a key driving force of technological innovation and is vitally important to the wider economy, especially in high-growth and technology intensive industries (e.g software, medical and agricultural technologies). Venture capital (VC) is a form of private equity, a medium to long-term form of finance provided in return for an equity stake in potentially high growth companies \cite{nvca2016}. Reported US venture capital investments in 2015 totalled US\$60 billion \cite{nvca2016}.
+Early-stage investment is a key driving force of technological innovation and is vitally important to the wider economy, especially in high-growth and technology intensive industries (e.g software, medical and agricultural technologies). \Gls{vc} is a form of private equity, a medium to long-term form of finance provided in return for an equity stake in potentially high growth companies \cite{nvca2016}. Reported US \gls{vc} investments in 2015 totalled US\$60 billion \cite{nvca2016}.
 
-Figure~\ref{fig:litreview:criteria:fund} illustrates the typical structure of a Venture Capital Fund. A typical fund is managed by a Venture Capital Firm (legally referred to as a General Partner) consisting of several investment partners. The fund itself (the Limited Partnership) is essentially an investment fund raised from various institutional investors such as pension funds, university endowments and family offices (legally referred to as Limited Partners). Beyond fundraising the main responsibilities of investment partners (also referred to as General Partners) are sourcing investment opportunities, making investment decisions and taking board membership to assist the management of investee private companies (also referred to as Portfolio Companies).
+%REWRITE REQUIRED -- TOO SIMILAR TO STONE (2014)
+Figure~\ref{fig:litreview:criteria:fund_structure} illustrates the typical structure of a \gls{vc} Fund. A typical fund is managed by a \gls{vc} Firm (legally referred to as a General Partner) consisting of several investment partners. The fund itself (the Limited Partnership) is essentially an investment fund raised from various institutional investors such as pension funds, university endowments and family offices (legally referred to as Limited Partners). Beyond fundraising the main responsibilities of investment partners (also referred to as General Partners) are sourcing investment opportunities, making investment decisions and taking board membership to assist the management of investee private companies (also referred to as Portfolio Companies).
 
 \begin{figure}[!htb]
     \centering
-    \input{figures/fund_structure}
-    \caption{}
-    \label{fig:litreview:criteria:fund}
+    \input{../figures/litreview/fund_structure} %NEEDS FIGURE
+    \caption{} %NEEDS CAPTION
+    \label{fig:litreview:criteria:fund_structure}
 \end{figure}
 
 \subsection{Venture Capital Firm Strategy}
 
-Typically, VC firms are reliant on a small number of high-risk investments to produce outsized returns through successful exit events. A common rule-of-thumb is that given a portfolio of ten startup companies: three will fail entirely, three will remain active but will not be very profitable, returning less than the invested capital, three will be active and profitable, returning just the invested capital and one highly successful startup will provide the investor with a multiple return on all of the investments \cite{stone2014}. In comparison to other traditional investment classes, VC financing is heavily biased towards control at the expense of risk mitigation. Although VC firms tend not to take majority stakes in startups, they exert their influence through significant minority stakes, board membership, their relative seniority to the company’s founders, and through leveraging their business networks \cite{fried2006}.
+Typically, \gls{vc} firms are reliant on a small number of high-risk investments to produce outsized returns through successful exit events. A common rule-of-thumb is that given a portfolio of ten startup companies: three will fail entirely, three will remain active but will not be very profitable, three will be active and profitable, and one highly successful startup will provide the investor with a multiple return on all of the investments \cite{stone2014}. In comparison to other traditional investment classes, \gls{vc} financing is heavily biased towards control at the expense of risk mitigation. Although \gls{vc} firms tend not to take majority stakes in startups, they exert their influence through significant minority stakes, board membership, their relative seniority to the company’s founders, and through leveraging their business networks \cite{fried2006}.
 
-Despite VC firms’, often significant, influence on the trajectory of their investments, they are still highly selective of the companies that they invest in. Although rarely reported, a small number of studies show VC investment rates vary between 1.5-3.5\% of proposals considered \cite{stone2014}. Accordingly, traditional venture finance is a very labour intensive and time consuming process involving extensive due diligence on behalf of the investor \cite{fried1994}. The VC investment process involves several main stages: deal origination, screening, evaluation, structuring (e.g., valuation, term sheets), and post investment activities (e.g., recruiting, financing).
+Despite \gls{vc} firms’, often significant, influence on the trajectory of their investments, they are still highly selective of the companies that they invest in. Although rarely reported, a small number of studies show \gls{vc} investment rates vary between 1.5-3.5\% of proposals considered \cite{stone2014}. Accordingly, traditional venture finance is a very labour intensive and time consuming process involving extensive due diligence on behalf of the investor \cite{fried1994}. The \gls{vc} investment process involves several main stages: deal origination, screening, evaluation, structuring (e.g., valuation, term sheets), and post investment activities (e.g., recruiting, financing).
 
 \subsection{Current Venture Capital Systems}
 
 Early-stage investment is characterised by a large number of investment candidates, high degree of uncertainty; a lack of reliable data on company performance (particularly financial performance); and a high time-cost of undertaking due diligence. This makes for a complicated origination and screening process. While referral from trusted sources (e.g., entrepreneurs, accountants, lawyers, other investors) is often used to screen opportunities, as the cost of starting businesses dramatically decreases investors are faced with an increasingly large number potential businesses and investment opportunities to assess and evaluate. Such a proliferation has led to an “information overload” problem in venture finance.
 
-Despite evidence that VC firms could benefit from increased use of data mining, it appears few are interested in advanced data analytics. Stone \cite{stone2014} interviewed Fred Wilson of Union Square Ventures who said: ``We have not been able to quantify [startup potential]. We haven’t even tried. Although I am sure someone could do it and they might be very successful with it. To us, the ideal founding team is one supremely talented product oriented founder and one, two, or three strong developers, and nothing else.'' Likewise, when asked, Chris Dixon of Andreessen Horowitz said: ``I’ve seen a few attempts to do it quantitatively but I think those are often flawed because the quantitatively measurable things are either obvious, irrelevant, or suffer from overfitting (finding patterns in the past that don’t carry forward in the future''.
+Despite evidence that \gls{vc} firms could benefit from increased use of data mining, it appears few are interested in advanced data analytics. Stone \cite{stone2014} interviewed Fred Wilson of Union Square Ventures who said: ``We have not been able to quantify [startup potential]. We haven’t even tried. Although I am sure someone could do it and they might be very successful with it. To us, the ideal founding team is one supremely talented product oriented founder and one, two, or three strong developers, and nothing else.'' Likewise, when asked, Chris Dixon of Andreessen Horowitz said: ``I’ve seen a few attempts to do it quantitatively but I think those are often flawed because the quantitatively measurable things are either obvious, irrelevant, or suffer from overfitting (finding patterns in the past that don’t carry forward in the future''.
 
-Similarly, while recently new software tools have been developed to assist VC firm, there is limited evidence of their adoption.
+Similarly, while recently new software tools have been developed to assist \gls{vc} firm, there is limited evidence of their adoption.
 
 \subsection{Proposed Criteria}
 
-Based on our review of the VC industry and current VC origination and screening processes, we have developed criteria on which we can evaluate our proposed system.
+Based on our review of the \gls{vc} industry and current \gls{vc} origination and screening processes, we have developed criteria on which we can evaluate our proposed system.
 
 \begin{enumerate}
 
@@ -63,13 +64,13 @@ Based on our review of the VC industry and current VC origination and screening 
 
 \item Robustness. Our system must be robust enough to be reliable over time. The system must provide a generalised, robust solution for investors that does not require significant technical knowledge to use, and is not overfitted to a specific time-period or data source.
 
-\item Predictive Power. Our system must be consistently accurate at identifying a variety of high-potential investment candidates. The system should be robust to different forecast windows (i.e. exit in three years from now) as VC firms make investment decisions with different periods so they can strategically manage the investment horizons of their funds.
+\item Predictive Power. Our system must be consistently accurate at identifying a variety of high-potential investment candidates. The system should be robust to different forecast windows (i.e. exit in three years from now) as \gls{vc} firms make investment decisions with different periods so they can strategically manage the investment horizons of their funds.
 
 \end{enumerate}
 
 \section{Feature Selection}
 
-Our understanding of the factors that influence venture capital investment decisions and the subsequent performance of those investments is incomplete. We believe a diverse range of features is critical to developing accurate models of startup performance and investment decisions.
+Our understanding of the factors that influence \gls{vc} investment decisions and the subsequent performance of those investments is incomplete. We believe a diverse range of features is critical to developing accurate models of startup performance and investment decisions.
 
 Prior work focuses on basic company features (e.g. the headquarters' location, the age of the company) for startup investment predictive models \cite{beckwith2016, gimmon2010}. Semantic text features (e.g. patents, media) \cite{hoenen2014, yuan2016} and social network features (e.g. co-investment networks) \cite{werth2013, cheng2016, yu2015} may also predict startup investment. We expect a model that includes semantic text and social network features alongside basic company features could lead to better startup investment prediction.
 
@@ -79,17 +80,17 @@ We seek to generalise Ahlers' framework~\cite{ahlers2015} beyond equity crowdfun
 
 \begin{figure}[!htb]
     \centering
-    \input{figures/framework_simple}
-    \caption{Proposed conceptual framework for startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}. For an extended version of this framework, please refer to Figure~\ref{fig:appendix:features:framework}.}
-    \label{fig:litreview:theory:framework}
+    \input{../figures/litreview/framework_simple}
+    \caption{Proposed conceptual framework for startup investment. We adapt the framework proposed by Ahlers et al.~\cite{ahlers2015}, originally based on work by Baum and Silverman~\cite{baum2004}. For an extended version of this framework, please refer to Figure~\ref{fig:litreview:features:framework_details}.}
+    \label{fig:litreview:features:framework_simple}
 \end{figure}
 
-Next, we must operationalise this conceptual framework into features that we can incorporate into our machine learning model. Table~\ref{fig:litreview:features:summary} shows a review of features tested in previous studies of startup investment. In Appendix A, we describe each of these features and outline theoretical and empirical evidence that justify their inclusion in our conceptual framework.
+Next, we must operationalise this conceptual framework into features that we can incorporate into our machine learning model. Table~\ref{fig:litreview:features:summary} shows a review of features tested in previous studies of startup investment. In Appendix~\ref{appendix:feature_summary}, we describe each of these features and outline theoretical and empirical evidence that justify their inclusion in our conceptual framework.
 
 \begin{table}[!htb]
     \centering
     \scalebox{1}{
-        \input{tables/feature_summary}
+        \input{../tables/litreview/feature_summary}
     }
     \caption{Features relevant to startup investment. We review thirteen empirical studies that investigate drivers of startup investment. For each study, we note whether included features have a significant effect on the startup investment model. We classify identified features according to our proposed conceptual framework.}
     \label{fig:litreview:features:summary}
@@ -110,7 +111,7 @@ In Table~\ref{fig:litreview:sources:summary}, we outline the characteristics of 
         \begin{sidewaystable}[!htbp]
             \centering
             \scalebox{0.8}{
-                \input{tables/sources_summary}
+                \input{../tables/litreview/sources_summary}
             }
             \caption{Data sources relevant to startup investment. We review six data sources commonly used in entrepreneurship research for their suitability for our startup investment task. We evaluate data sources for their ability to provide relevant features for our analyses and for their ease of use in data collection. We exclude offline sources from our analyses. Ratings are: \protect\xmark~=~poor, \protect\cmark~=~satisfactory, \protect\cmark\protect\cmark~=~good.}
             \label{fig:litreview:sources:summary}
@@ -120,11 +121,11 @@ In Table~\ref{fig:litreview:sources:summary}, we outline the characteristics of 
 
 \subsection{Source Characteristics}
 
-Entrepreneurship research is transforming with the availability of online data sources: databases, websites and social networks. Entrepreneurship studies have historically relied on surveys and interviews for data collection. Measures of human capital (e.g. founders' capabilities), strategic alliances, and financial performance are difficult to capture elsewhere. However, the trade-off for access to these features is that surveys and interviews are time-consuming and costly to implement. While online surveys address some of these issues, it is still difficult to motivate potential participants to contribute. Online data sources like startup databases and social networks are efficient because collecting data is a secondary function of users interacting with these sources. Researchers can also collect data from these sources automatically and at scale. For these reasons, we only consider online data sources for inclusion in this study, specifically crowd-sourced startup databases (e.g. CrunchBase, AngelList), social networks (e.g. Twitter, LinkedIn), government patent databases (e.g. PatentsView) and private company intelligence providers (e.g. PrivCo). In Appendix B we review the characteristics of each of these data sources commonly used in entrepreneurship research.
+Entrepreneurship research is transforming with the availability of online data sources: databases, websites and social networks. Entrepreneurship studies have historically relied on surveys and interviews for data collection. Measures of human capital (e.g. founders' capabilities), strategic alliances, and financial performance are difficult to capture elsewhere. However, the trade-off for access to these features is that surveys and interviews are time-consuming and costly to implement. While online surveys address some of these issues, it is still difficult to motivate potential participants to contribute. Online data sources like startup databases and social networks are efficient because collecting data is a secondary function of users interacting with these sources. Researchers can also collect data from these sources automatically and at scale. For these reasons, we only consider online data sources for inclusion in this study, specifically crowd-sourced startup databases (e.g. CrunchBase, AngelList), social networks (e.g. Twitter, LinkedIn), government patent databases (e.g. PatentsView) and private company intelligence providers (e.g. PrivCo). In Appendix~\ we review the characteristics of each of these data sources commonly used in entrepreneurship research.
 
 \subsection{Source Evaluation}
 
-Entrepreneurship and venture capital research is primed to take advantage of the availability of new online data sources. We evaluated relevant data sources for their suitability to predicting startup investment. Startup databases CrunchBase and AngelList provide the most comprehensive set of features. There are small differences between the features recorded by each. CrunchBase has slightly more coverage and tracks media better but lacks AngelList's social network. At least one startup database should be used and either are satisfactory. Of the other data sources we review, PatentsView  is the most promising. PatentsView provides comprehensive patent information, though it could prove difficult matching identities to other sources. Other data sources are less promising because of access issues. LinkedIn cannot be easily collected now the API is deprecated. Twitter provides social network topology and basic profile information through its free API but does not provide access to historical tweets. Financial reports are too expensive for the purposes of this study.
+Entrepreneurship and \gls{vc} research is primed to take advantage of the availability of new online data sources. We evaluated relevant data sources for their suitability to predicting startup investment. Startup databases CrunchBase and AngelList provide the most comprehensive set of features. There are small differences between the features recorded by each. CrunchBase has slightly more coverage and tracks media better but lacks AngelList's social network. At least one startup database should be used and either are satisfactory. Of the other data sources we review, PatentsView  is the most promising. PatentsView provides comprehensive patent information, though it could prove difficult matching identities to other sources. Other data sources are less promising because of access issues. LinkedIn cannot be easily collected now the API is deprecated. Twitter provides social network topology and basic profile information through its free API but does not provide access to historical tweets. Financial reports are too expensive for the purposes of this study.
 
 \section{Classification Algorithms}
 
@@ -139,7 +140,7 @@ We evaluated common machine learning algorithms with respect to their suitabilit
         \begin{sidewaystable}[!htbp]
             \centering
             \setlength{\extrarowheight}{.5em}
-            \input{tables/algorithms_evaluation}
+            \input{../tables/litreview/algorithms_evaluation}
             \caption{Evaluation of machine learning algorithms for startup investment prediction. We review seven common supervised machine learning algorithms for their suitability for our startup investment task. We evaluate algorithms for their robustness to the structure of the data set and their appropriateness for the constraints of our implementation. We rank the algorithms according to the sum of these measures (in each section and overall) and bold highly-ranked algorithms. Ratings are: \protect\xmark~=~poor, \protect\cmark~=~satisfactory, \protect\cmark\protect\cmark~=~good. Algorithms are: NB~=~Naive Bayes, LR~=~Logistic Regression, KNN~=~K-Nearest Neighbours, DT~=~Decision Trees, RF~=~Random Forests, SVM~=~Support Vector Machines, ANN~=~Artificial Neural Networks.}
             \label{fig:litreview:algorithms:evaluation}
         \end{sidewaystable}
@@ -156,7 +157,7 @@ While data sets can be pre-processed to assist with their standardisation, some 
 
 \subsubsection{Algorithm Properties}
 
-The desired properties of machine learning algorithms are related to the business problems that are being addressed. Predictive power, interpretability and processing speed are all desirable characteristics but involve trade-offs and must be prioritised. Predictive power is the ability of a machine learning algorithm to correctly classify new observations. Predictive power can be evaluated in many ways. As our data set is likely to have an imbalanced class distribution, we will evaluate predictive power based on balanced metrics like Area under the Receiver-Operator Curve and the F1 Score. If a model has no predictive power, the model is not representing the underlying process being studied. For this reason, predictive power is a desirable property of our algorithm. However, if multiple algorithms provide similar predictive power other selection criteria become significant. Interpretability is the extent to which the reasoning of a model can be communicated to the end-user. There is a trade-off between model complexity and model interpretability. Some models are a ``black box'' in the sense that data comes in and out but the model cannot be interpreted. For this study, it is a key objective that we improve our understanding of the determinants of startup investment. Therefore, interpretability is a desirable property of our algorithm. Finally, processing speed is another desirable property, especially when handling real-time data or when there is a need to run exploratory analyses on the fly. In this case, processing speed is not critical because generally VC investment decisions are made over weeks and months, though there is some need for the data set to be updated with new information as it becomes available.
+The desired properties of machine learning algorithms are related to the business problems that are being addressed. Predictive power, interpretability and processing speed are all desirable characteristics but involve trade-offs and must be prioritised. Predictive power is the ability of a machine learning algorithm to correctly classify new observations. Predictive power can be evaluated in many ways. As our data set is likely to have an imbalanced class distribution, we will evaluate predictive power based on balanced metrics like Area under the Receiver-Operator Curve and the F1 Score. If a model has no predictive power, the model is not representing the underlying process being studied. For this reason, predictive power is a desirable property of our algorithm. However, if multiple algorithms provide similar predictive power other selection criteria become significant. Interpretability is the extent to which the reasoning of a model can be communicated to the end-user. There is a trade-off between model complexity and model interpretability. Some models are a ``black box'' in the sense that data comes in and out but the model cannot be interpreted. For this study, it is a key objective that we improve our understanding of the determinants of startup investment. Therefore, interpretability is a desirable property of our algorithm. Finally, processing speed is another desirable property, especially when handling real-time data or when there is a need to run exploratory analyses on the fly. In this case, processing speed is not critical because generally \gls{vc} investment decisions are made over weeks and months, though there is some need for the data set to be updated with new information as it becomes available.
 
 \subsection{Algorithm Characteristics}
 
@@ -168,12 +169,16 @@ We evaluated supervised learning algorithms for their suitability in startup inv
 
 \section{Research Gap}
 
-The venture capital industry requires better systems and processes to efficiently manage labour-intensive tasks like investment screening. Existing approaches in the literature to predict startup performance have three common limitations: small sample size, a focus on very early stage investment, and incomplete use of features. In addition, there is little evidence that previous research has been translated into systems that are able to assist investors directly. We conducted a literature review to determine how to address these limitations and produce a system that will assist venture capitalists in originating and screening investment candidates.
+The \gls{vc} industry requires better systems and processes to efficiently manage labour-intensive tasks like investment screening. Existing approaches in the literature to predict startup performance have three common limitations: small sample size, a focus on very early stage investment, and incomplete use of features. In addition, there is little evidence that previous research has been translated into systems that are able to assist investors directly. We conducted a literature review to determine how to address these limitations and produce a system that will assist \gls{vc} firms in originating and screening investment candidates.
 
 Firstly, we reviewed the business problem and developed three criteria that will help us evaluate our system: efficiency, robustness and predictive power. Secondly, we developed a conceptual framework of predicting startup performance that incorporates determinants of startup potential and signals that influence investment confidence. This framework informs our feature selection. We then assessed potential data sources and found preliminary evidence that suggests that the startup databases CrunchBase and AngelList are promising and likely to provide a comprehensive feature set that can form the basis of our system. Finally, we reviewed supervised machine learning techniques applied to startup investment and other areas of finance. Our analyses suggested that we should expect Random Forests, Support Vector Machines and Artificial Neural Networks to be most suitable for our system.
 
 Based on this literature review, we believe it is now possible to address previous limitations in this domain and produce an investment screening system that is efficient, robust and powerful. In the next chapter, we will outline the process by which we attempt to develop that system.
 
-\ifcsdef{mainfile}{}{\printbibliography}
+\ifcsdef{mainfile}{}{
+    \appendix
+    \subfile{../litreview/appendices}
+    \printbibliography
+}
 \end{document}
 
