--- a/submissions/thesis-original/thesis/appendices.tex
+++ b/submissions/thesis-original/thesis/appendices.tex
@@ -1,5 +1,5 @@
-\subfile{../introduction/appendix}
-\subfile{../litreview/appendix}
-\subfile{../methods/appendix}
-\subfile{../results/appendix}
-\subfile{../discussion/appendix}
+\subfile{../introduction/appendices}
+\subfile{../litreview/appendices}
+\subfile{../design/appendices}
+\subfile{../evaluation/appendices}
+\subfile{../discussion/appendices}
