--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -25,6 +25,7 @@
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{xspace}
+\usepackage{subcaption}
 \usepackage[acronym,shortcuts]{glossaries}
 
 
@@ -71,6 +72,8 @@
 \newacronym{vc}{VC}{venture capital}
 \newacronym{roc}{ROC}{receiver operating characteristic}
 \newacronym{ipo}{IPO}{initial public offering}
+\newacronym{pca}{PCA}{principal component analysis}
+\newacronym{uspto}{USPTO}{United States Patent and Trademark Office}
 
 % Fancyref support for subsections, source; https://github.com/openlilylib/tutorials/blob/master/aGervasoni/orchestralScores/example-materials/OLLbase.sty
 \newcommand*{\fancyrefsubseclabelprefix}{subsec}
